--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
             height: 100vh;
             margin: 0;
         }
-
-        td {
-            border: 1px solid #000;
-        }
+        table{width: 400px;height: 400px;border-collapse: collapse;} <!–– add Dimension and collapse ––>
+        td {border: 1px solid #000;}
+        .black {background-color: black;} <!–– add color to Class="Black" ––>
     </style>
 </head>
 <body>
